src/expr/snapshots/datafusion_delta_sharing__expr__serialize_op__serialize_equal_op.snap
---
source: src/expr/mod.rs
expression: op
---
{
  "op": "equal",
  "children": [
    {
      "op": "column",
      "name": "column_name",
      "valueType": "string"
    },
    {
      "op": "literal",
      "value": "literal_value",
      "valueType": "string"
    }
  ]
}
