src/expr/snapshots/datafusion_delta_sharing__expr__serialize_op__serialize_greater_than_op.snap
---
source: src/expr/mod.rs
expression: op
---
{
  "op": "greaterThan",
  "children": [
    {
      "op": "column",
      "name": "column_name",
      "valueType": "int"
    },
    {
      "op": "literal",
      "value": "25",
      "valueType": "int"
    }
  ]
}
