src/expr/snapshots/datafusion_delta_sharing__expr__serialize_op__serialize_is_null_op.snap
---
source: src/expr/mod.rs
expression: op
---
{
  "op": "isNull",
  "children": [
    {
      "op": "column",
      "name": "column_name",
      "valueType": "string"
    }
  ]
}
