src/expr/snapshots/datafusion_delta_sharing__expr__serialize_op__serialize_less_than_or_equal_op.snap
---
source: src/expr/mod.rs
expression: op
---
{
  "op": "lessThanOrEqual",
  "children": [
    {
      "op": "column",
      "name": "column_name",
      "valueType": "int"
    },
    {
      "op": "literal",
      "value": "25",
      "valueType": "int"
    }
  ]
}
