src/expr/snapshots/datafusion_delta_sharing__expr__serialize_op__serialize_literal_op.snap
---
source: src/expr/mod.rs
expression: op
---
{
  "op": "literal",
  "value": "literal_value",
  "valueType": "string"
}
