src/expr/snapshots/datafusion_delta_sharing__expr__serialize_op__serialize_not_op.snap
---
source: src/expr/mod.rs
expression: op
---
{
  "op": "not",
  "children": [
    {
      "op": "equal",
      "children": [
        {
          "op": "column",
          "name": "a",
          "valueType": "string"
        },
        {
          "op": "literal",
          "value": "1",
          "valueType": "string"
        }
      ]
    }
  ]
}
